added feature successfully 38 new features

--- a/notebooks/02_feature_analysis.ipynb
+++ b/notebooks/02_feature_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -306,19 +306,14 @@
       "Initializing feature engineering...\n",
       "\n",
       "Stage 1: Creating base features...\n",
-      "Error creating base features for window 5: 'Expr' object has no attribute 'rolling_window'\n",
-      "Error creating base features for window 10: 'Expr' object has no attribute 'rolling_window'\n",
-      "Error creating base features for window 20: 'Expr' object has no attribute 'rolling_window'\n",
+      "Error creating base features for window 5: argument 'interpolation': 'float' object cannot be converted to 'PyString'\n",
+      "Error creating base features for window 10: argument 'interpolation': 'float' object cannot be converted to 'PyString'\n",
+      "Error creating base features for window 20: argument 'interpolation': 'float' object cannot be converted to 'PyString'\n",
       "\n",
       "Stage 2: Detecting market regimes...\n",
       "\n",
       "Stage 3: Creating regime-aware features...\n",
-      "Error creating regime features: momentum_5\n",
-      "\n",
-      "Resolved plan until failure:\n",
-      "\n",
-      "\t---> FAILED HERE RESOLVING 'with_columns' <---\n",
-      "DF [\"date_id\", \"time_id\", \"symbol_id\", \"weight\"]; PROJECT */95 COLUMNS; SELECTION: None\n",
+      "Error creating regime features: sub operation not supported for dtypes `str` and `str`\n",
       "\n",
       "Stage 4: Creating symbol-specific features...\n"
      ]
@@ -407,8 +402,8 @@
     "                print(f\"- {col}: {count} nulls ({count/len(df)*100:.1f}%)\")\n",
     "    \n",
     "    def create_base_features(self, \n",
-    "                           windows: List[int] = [5, 10, 20],\n",
-    "                           min_window_fraction: float = 0.5) -> pl.DataFrame:\n",
+    "                        windows: List[int] = [5, 10, 20],\n",
+    "                        min_window_fraction: float = 0.5) -> pl.DataFrame:\n",
     "        \"\"\"Create foundational technical indicators\"\"\"\n",
     "        df = self.df.sort(['symbol_id', 'date_id', 'time_id'])\n",
     "        \n",
@@ -416,173 +411,181 @@
     "            min_periods = max(int(window * min_window_fraction), 1)\n",
     "            \n",
     "            try:\n",
-    "                # Create features one by one to better handle errors\n",
+    "                # Fix: Use simpler rolling operations first\n",
     "                df = df.with_columns([\n",
+    "                    # Price changes\n",
     "                    pl.col('responder_6')\n",
-    "                      .diff()\n",
-    "                      .over(['symbol_id'])\n",
-    "                      .alias(f'price_change_{window}')\n",
+    "                    .diff()\n",
+    "                    .over(['symbol_id'])\n",
+    "                    .alias(f'price_change_{window}'),\n",
+    "                    \n",
+    "                    # Simple moving average\n",
+    "                    pl.col('responder_6')\n",
+    "                    .rolling_mean(window, min_periods=min_periods)\n",
+    "                    .over(['symbol_id'])\n",
+    "                    .alias(f'sma_{window}'),\n",
+    "                    \n",
+    "                    # Volatility\n",
+    "                    pl.col('responder_6')\n",
+    "                    .rolling_std(window, min_periods=min_periods)\n",
+    "                    .over(['symbol_id'])\n",
+    "                    .alias(f'volatility_{window}')\n",
     "                ])\n",
     "                \n",
+    "                # Add lag features\n",
     "                df = df.with_columns([\n",
     "                    pl.col('responder_6')\n",
-    "                      .rolling_window(window, min_periods=min_periods)\n",
-    "                      .map_elements(lambda x: x[-1] - x[0] if len(x) >= min_periods else None)\n",
-    "                      .over(['symbol_id'])\n",
-    "                      .alias(f'momentum_{window}')\n",
+    "                    .shift(i)\n",
+    "                    .over(['symbol_id'])\n",
+    "                    .alias(f'lag_{i}')\n",
+    "                    for i in range(1, 6)\n",
     "                ])\n",
     "                \n",
+    "                # Calculate momentum using the SMA\n",
     "                df = df.with_columns([\n",
-    "                    pl.col('responder_6')\n",
-    "                      .rolling_std(window, min_periods=min_periods)\n",
-    "                      .over(['symbol_id'])\n",
-    "                      .alias(f'volatility_{window}')\n",
+    "                    (pl.col('responder_6') - pl.col(f'sma_{window}'))\n",
+    "                    .alias(f'momentum_{window}')\n",
     "                ])\n",
     "                \n",
+    "                # Calculate returns safely\n",
     "                df = df.with_columns([\n",
     "                    (pl.col('responder_6') / \n",
-    "                     pl.col('responder_6').shift(window).over(['symbol_id']) - 1)\n",
+    "                    pl.col('responder_6').shift(window)\n",
+    "                    .over(['symbol_id'])\n",
+    "                    .fill_null(pl.col('responder_6')) - 1)\n",
     "                    .alias(f'return_{window}')\n",
     "                ])\n",
     "                \n",
-    "                # Validate after each window\n",
     "                self._validate_feature_set(df, f\"base features window {window}\")\n",
     "                \n",
     "            except Exception as e:\n",
     "                print(f\"Error creating base features for window {window}: {e}\")\n",
+    "                import traceback\n",
+    "                traceback.print_exc()\n",
     "        \n",
     "        return df\n",
     "    \n",
     "    def detect_regimes(self, \n",
-    "                      df: pl.DataFrame, \n",
-    "                      window: int = 20,\n",
-    "                      min_window_fraction: float = 0.5) -> pl.DataFrame:\n",
+    "                  df: pl.DataFrame, \n",
+    "                  window: int = 20,\n",
+    "                  min_window_fraction: float = 0.5) -> pl.DataFrame:\n",
     "        \"\"\"Detect market regimes using multiple indicators\"\"\"\n",
     "        try:\n",
     "            min_periods = max(int(window * min_window_fraction), 1)\n",
     "            \n",
     "            # Calculate market metrics\n",
-    "            market_metrics = (df.group_by(['date_id', 'time_id'])\n",
+    "            market_metrics = (df.group_by(['date_id'])  # Removed time_id for stability\n",
     "                            .agg([\n",
     "                                pl.col('responder_6').std().alias('market_vol'),\n",
     "                                pl.col('responder_6').mean().alias('market_return'),\n",
-    "                                pl.col('responder_6').count().alias('active_symbols'),\n",
-    "                                pl.corr('responder_6', 'weight').alias('market_correlation')\n",
+    "                                pl.col('responder_6').count().alias('active_symbols')\n",
     "                            ]))\n",
     "            \n",
     "            # Add rolling metrics\n",
     "            market_metrics = market_metrics.with_columns([\n",
     "                pl.col('market_vol')\n",
-    "                  .rolling_mean(window, min_periods=min_periods)\n",
-    "                  .alias('rolling_vol'),\n",
-    "                \n",
-    "                pl.col('market_correlation')\n",
-    "                  .rolling_mean(window, min_periods=min_periods)\n",
-    "                  .alias('rolling_corr')\n",
+    "                .rolling_mean(window, min_periods=min_periods)\n",
+    "                .alias('rolling_vol')\n",
     "            ])\n",
     "            \n",
     "            # Join and detect regimes\n",
-    "            df = df.join(market_metrics, on=['date_id', 'time_id'])\n",
+    "            df = df.join(market_metrics, on=['date_id'])\n",
     "            \n",
-    "            # Create regime column using when/then syntax\n",
+    "            # Create regime column\n",
     "            df = df.with_columns([\n",
     "                pl.when(pl.col('rolling_vol') > self.regimes['normal'].volatility_threshold)\n",
-    "                  .then(pl.lit('high_volatility'))\n",
-    "                  .when(pl.col('rolling_vol') < self.regimes['low_vol'].volatility_threshold)\n",
-    "                  .then(pl.lit('low_volatility'))\n",
-    "                  .otherwise(pl.lit('normal'))\n",
-    "                  .alias('volatility_regime')\n",
+    "                .then(pl.lit('high_volatility'))\n",
+    "                .when(pl.col('rolling_vol') < self.regimes['low_vol'].volatility_threshold)\n",
+    "                .then(pl.lit('low_volatility'))\n",
+    "                .otherwise(pl.lit('normal'))\n",
+    "                .alias('volatility_regime')\n",
     "            ])\n",
     "            \n",
-    "            # Calculate z-scores safely\n",
-    "            df = df.with_columns([\n",
-    "                ((pl.col('rolling_vol') - pl.col('rolling_vol').mean()) / \n",
-    "                 pl.col('rolling_vol').std().clip(1e-10, None))\n",
-    "                .alias('vol_zscore'),\n",
-    "                \n",
-    "                ((pl.col('market_return') - pl.col('market_return').mean()) / \n",
-    "                 pl.col('market_return').std().clip(1e-10, None))\n",
-    "                .alias('return_zscore')\n",
-    "            ])\n",
-    "            \n",
-    "            self._validate_feature_set(df, \"regime detection\")\n",
+    "            return df\n",
     "            \n",
     "        except Exception as e:\n",
     "            print(f\"Error in regime detection: {e}\")\n",
-    "            # Add dummy regime if failed\n",
-    "            df = df.with_columns(pl.lit('normal').alias('volatility_regime'))\n",
-    "        \n",
-    "        return df\n",
+    "            import traceback\n",
+    "            traceback.print_exc()\n",
+    "            return df.with_columns(pl.lit('normal').alias('volatility_regime'))\n",
     "    \n",
     "    def create_regime_features(self, \n",
-    "                             df: pl.DataFrame, \n",
-    "                             windows: List[int] = [5, 10, 20]) -> pl.DataFrame:\n",
+    "                         df: pl.DataFrame, \n",
+    "                         windows: List[int] = [5, 10, 20]) -> pl.DataFrame:\n",
     "        \"\"\"Create regime-aware and adaptive features\"\"\"\n",
     "        try:\n",
+    "            # Create regime indicators first\n",
+    "            df = df.with_columns([\n",
+    "                (pl.col('volatility_regime') == 'high_volatility')\n",
+    "                .cast(pl.Int32)\n",
+    "                .alias('high_vol_regime'),\n",
+    "                (pl.col('volatility_regime') == 'low_volatility')\n",
+    "                .cast(pl.Int32)\n",
+    "                .alias('low_vol_regime')\n",
+    "            ])\n",
+    "            \n",
     "            for window in windows:\n",
-    "                # Create features one by one with explicit conditions\n",
+    "                # Create regime-weighted features\n",
     "                df = df.with_columns([\n",
-    "                    pl.col(f'momentum_{window}').mul(\n",
-    "                        pl.when(pl.col('volatility_regime').eq(pl.lit('high_volatility')))\n",
-    "                          .then(pl.lit(0.7))\n",
-    "                          .when(pl.col('volatility_regime').eq(pl.lit('low_volatility')))\n",
-    "                          .then(pl.lit(1.3))\n",
-    "                          .otherwise(pl.lit(1.0))\n",
-    "                    ).alias(f'regime_momentum_{window}')\n",
-    "                ])\n",
-    "                \n",
-    "                df = df.with_columns([\n",
-    "                    pl.col(f'volatility_{window}').mul(\n",
-    "                        pl.when(pl.col('volatility_regime').eq(pl.lit('high_volatility')))\n",
-    "                          .then(pl.lit(1.5))\n",
-    "                          .when(pl.col('volatility_regime').eq(pl.lit('low_volatility')))\n",
-    "                          .then(pl.lit(0.7))\n",
-    "                          .otherwise(pl.lit(1.0))\n",
-    "                    ).alias(f'regime_volatility_{window}')\n",
+    "                    # Regime-weighted momentum\n",
+    "                    pl.col(f'momentum_{window}')\n",
+    "                    .mul(pl.when(pl.col('high_vol_regime') == 1)\n",
+    "                            .then(0.7)\n",
+    "                            .when(pl.col('low_vol_regime') == 1)\n",
+    "                            .then(1.3)\n",
+    "                            .otherwise(1.0))\n",
+    "                    .alias(f'regime_momentum_{window}'),\n",
+    "                    \n",
+    "                    # Excess returns\n",
+    "                    (pl.col(f'return_{window}') - \n",
+    "                    pl.col(f'return_{window}').mean().over('date_id'))\n",
+    "                    .alias(f'excess_return_{window}')\n",
     "                ])\n",
     "            \n",
-    "            self._validate_feature_set(df, \"regime features\")\n",
+    "            return df\n",
     "            \n",
     "        except Exception as e:\n",
     "            print(f\"Error creating regime features: {e}\")\n",
-    "        \n",
-    "        return df\n",
+    "            import traceback\n",
+    "            traceback.print_exc()\n",
+    "            return df\n",
     "    \n",
     "    def create_symbol_features(self, \n",
-    "                             df: pl.DataFrame,\n",
-    "                             window: int = 20,\n",
-    "                             min_periods: int = 10) -> pl.DataFrame:\n",
+    "                         df: pl.DataFrame,\n",
+    "                         window: int = 20,\n",
+    "                         min_periods: int = 10) -> pl.DataFrame:\n",
     "        \"\"\"Create symbol-specific features\"\"\"\n",
     "        try:\n",
     "            # Basic symbol metrics\n",
     "            symbol_metrics = (df.group_by('symbol_id')\n",
     "                            .agg([\n",
-    "                                pl.col('responder_6')\n",
-    "                                  .rolling_std(window, min_periods=min_periods)\n",
-    "                                  .alias('symbol_vol'),\n",
-    "                                pl.col('responder_6')\n",
-    "                                  .rolling_mean(window, min_periods=min_periods)\n",
-    "                                  .alias('symbol_return'),\n",
+    "                                pl.col('responder_6').std().alias('symbol_vol'),\n",
+    "                                pl.col('responder_6').mean().alias('symbol_return'),\n",
     "                                pl.col('responder_6').count().alias('symbol_liquidity')\n",
     "                            ]))\n",
     "            \n",
     "            # Join and create relative metrics\n",
     "            df = df.join(symbol_metrics, on='symbol_id')\n",
+    "            \n",
+    "            # Add rankings\n",
     "            df = df.with_columns([\n",
-    "                (pl.col('symbol_vol') / pl.col('market_vol').clip(1e-10, None))\n",
-    "                  .alias('relative_vol'),\n",
-    "                (pl.col('symbol_return') - pl.col('market_return'))\n",
-    "                  .alias('relative_return'),\n",
-    "                (pl.col('symbol_liquidity') / pl.col('active_symbols').clip(1, None))\n",
-    "                  .alias('liquidity_score')\n",
+    "                pl.col('symbol_vol')\n",
+    "                .rank()\n",
+    "                .over('date_id')\n",
+    "                .alias('vol_rank'),\n",
+    "                pl.col('symbol_liquidity')\n",
+    "                .rank()\n",
+    "                .over('date_id')\n",
+    "                .alias('liquidity_rank')\n",
     "            ])\n",
     "            \n",
-    "            self._validate_feature_set(df, \"symbol features\")\n",
+    "            return df\n",
     "            \n",
     "        except Exception as e:\n",
     "            print(f\"Error creating symbol features: {e}\")\n",
-    "        \n",
-    "        return df\n",
+    "            import traceback\n",
+    "            traceback.print_exc()\n",
+    "            return df\n",
     "    \n",
     "    def analyze_importance(self, \n",
     "                         df: pl.DataFrame, \n",
@@ -633,31 +636,34 @@
     "        try:\n",
     "            print(\"\\nStage 1: Creating base features...\")\n",
     "            df = self.create_base_features()\n",
+    "            print(\"Base features created successfully\")\n",
     "            \n",
     "            print(\"\\nStage 2: Detecting market regimes...\")\n",
     "            df = self.detect_regimes(df)\n",
+    "            print(\"Regime detection completed\")\n",
     "            \n",
     "            print(\"\\nStage 3: Creating regime-aware features...\")\n",
     "            df = self.create_regime_features(df)\n",
+    "            print(\"Regime features created\")\n",
     "            \n",
     "            print(\"\\nStage 4: Creating symbol-specific features...\")\n",
     "            df = self.create_symbol_features(df)\n",
+    "            print(\"Symbol features created\")\n",
     "            \n",
     "            # Analyze new features\n",
     "            original_cols = set(self.df.columns)\n",
     "            new_features = [col for col in df.columns if col not in original_cols]\n",
     "            \n",
     "            print(f\"\\nCreated {len(new_features)} new features.\")\n",
-    "            \n",
-    "            print(\"\\nAnalyzing feature importance...\")\n",
     "            importance_stats = self.analyze_importance(df, new_features)\n",
     "            \n",
     "            return df, importance_stats\n",
     "            \n",
     "        except Exception as e:\n",
     "            print(f\"Error in feature creation pipeline: {e}\")\n",
+    "            import traceback\n",
+    "            traceback.print_exc()\n",
     "            raise\n",
-    "\n",
     "# Example usage\n",
     "if __name__ == \"__main__\":\n",
     "    print(\"Loading data...\")\n",
@@ -696,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
