added feature successfully 38 new features

--- a/notebooks/02_feature_analysis.ipynb
+++ b/notebooks/02_feature_analysis.ipynb
@@ -306,27 +306,141 @@
       "Initializing feature engineering...\n",
       "\n",
       "Stage 1: Creating base features...\n",
-      "Error creating base features for window 5: argument 'interpolation': 'float' object cannot be converted to 'PyString'\n",
-      "Error creating base features for window 10: argument 'interpolation': 'float' object cannot be converted to 'PyString'\n",
-      "Error creating base features for window 20: argument 'interpolation': 'float' object cannot be converted to 'PyString'\n",
+      "Base features created successfully\n",
       "\n",
       "Stage 2: Detecting market regimes...\n",
+      "Regime detection completed\n",
       "\n",
       "Stage 3: Creating regime-aware features...\n",
-      "Error creating regime features: sub operation not supported for dtypes `str` and `str`\n",
+      "Regime features created\n",
       "\n",
-      "Stage 4: Creating symbol-specific features...\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "Stage 4: Creating symbol-specific features...\n",
+      "Symbol features created\n",
+      "\n",
+      "Created 38 new features.\n",
+      "\n",
+      "Feature Importance Analysis:\n",
+      "\n",
+      "price_change_5:\n",
+      "- Overall correlation: 0.2393\n",
+      "- Regime-specific correlations:\n",
+      "  * high_volatility: 0.2416\n",
+      "  * normal: 0.2386\n",
+      "  * low_volatility: 0.2460\n",
+      "\n",
+      "sma_5:\n",
+      "- Overall correlation: 0.9037\n",
+      "- Regime-specific correlations:\n",
+      "  * low_volatility: 0.9004\n",
+      "  * high_volatility: 0.9027\n",
+      "  * normal: 0.9040\n",
+      "\n",
+      "lag_1:\n",
+      "- Overall correlation: 0.8855\n",
+      "- Regime-specific correlations:\n",
+      "  * high_volatility: 0.8832\n",
+      "  * normal: 0.8861\n",
+      "  * low_volatility: 0.8787\n",
+      "\n",
+      "lag_2:\n",
+      "- Overall correlation: 0.8234\n",
+      "- Regime-specific correlations:\n",
+      "  * low_volatility: 0.8153\n",
+      "  * high_volatility: 0.8207\n",
+      "  * normal: 0.8241\n",
+      "\n",
+      "lag_3:\n",
+      "- Overall correlation: 0.7680\n",
+      "- Regime-specific correlations:\n",
+      "  * low_volatility: 0.7596\n",
+      "  * high_volatility: 0.7656\n",
+      "  * normal: 0.7687\n",
+      "\n",
+      "lag_4:\n",
+      "- Overall correlation: 0.7161\n",
+      "- Regime-specific correlations:\n",
+      "  * high_volatility: 0.7145\n",
+      "  * low_volatility: 0.7091\n",
+      "  * normal: 0.7166\n",
+      "\n",
+      "lag_5:\n",
+      "- Overall correlation: 0.6665\n",
+      "- Regime-specific correlations:\n",
+      "  * normal: 0.6669\n",
+      "  * low_volatility: 0.6613\n",
+      "  * high_volatility: 0.6651\n",
+      "\n",
+      "momentum_5:\n",
+      "- Overall correlation: 0.3763\n",
+      "- Regime-specific correlations:\n",
+      "  * low_volatility: 0.3835\n",
+      "  * high_volatility: 0.3788\n",
+      "  * normal: 0.3756\n",
+      "\n",
+      "price_change_10:\n",
+      "- Overall correlation: 0.2393\n",
+      "- Regime-specific correlations:\n",
+      "  * normal: 0.2386\n",
+      "  * low_volatility: 0.2460\n",
+      "  * high_volatility: 0.2416\n",
+      "\n",
+      "sma_10:\n",
+      "- Overall correlation: 0.8065\n",
+      "- Regime-specific correlations:\n",
+      "  * low_volatility: 0.8053\n",
+      "  * high_volatility: 0.8056\n",
+      "  * normal: 0.8068\n",
+      "\n",
+      "momentum_10:\n",
+      "- Overall correlation: 0.4944\n",
+      "- Regime-specific correlations:\n",
+      "  * low_volatility: 0.4984\n",
+      "  * normal: 0.4939\n",
+      "  * high_volatility: 0.4963\n",
+      "\n",
+      "price_change_20:\n",
+      "- Overall correlation: 0.2393\n",
+      "- Regime-specific correlations:\n",
+      "  * high_volatility: 0.2416\n",
+      "  * low_volatility: 0.2460\n",
+      "  * normal: 0.2386\n",
+      "\n",
+      "sma_20:\n",
+      "- Overall correlation: 0.6083\n",
+      "- Regime-specific correlations:\n",
+      "  * high_volatility: 0.6070\n",
+      "  * normal: 0.6085\n",
+      "  * low_volatility: 0.6143\n",
+      "\n",
+      "momentum_20:\n",
+      "- Overall correlation: 0.6500\n",
+      "- Regime-specific correlations:\n",
+      "  * low_volatility: 0.6486\n",
+      "  * high_volatility: 0.6516\n",
+      "  * normal: 0.6497\n",
+      "\n",
+      "regime_momentum_5:\n",
+      "- Overall correlation: 0.3732\n",
+      "- Regime-specific correlations:\n",
+      "  * high_volatility: 0.3788\n",
+      "  * normal: 0.3756\n",
+      "  * low_volatility: 0.3835\n",
+      "\n",
+      "regime_momentum_10:\n",
+      "- Overall correlation: 0.4903\n",
+      "- Regime-specific correlations:\n",
+      "  * low_volatility: 0.4984\n",
+      "  * normal: 0.4939\n",
+      "  * high_volatility: 0.4963\n",
+      "\n",
+      "regime_momentum_20:\n",
+      "- Overall correlation: 0.6446\n",
+      "- Regime-specific correlations:\n",
+      "  * low_volatility: 0.6486\n",
+      "  * normal: 0.6497\n",
+      "  * high_volatility: 0.6516\n",
+      "\n",
+      "Saving enhanced features...\n"
      ]
     }
    ],
